fix: fixed DataChangeTest, upgraded Kafka API